[package]
name = "structured_scaffolding_language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"
lazy_static = "1.4.0"
pest = "2.7.10"
pest_derive = "2.7.10"
glam = "0.27.0"
ron = "0.9.0-alpha.0"
serde = { version = "1.0.200", features = ["derive"] }
