[package]
name = "structured_scaffolding_language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
lazy_static = "1.4.0"
pest = "2.7.10"
pest_derive = "2.7.10"
glam = "0.27"
ron = "0.8.1"
anyhow = "1.0.79"